2000-12-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSGAttributedString.m: Fix logic errors setting attributes.

2000-12-18  Adam Fedor  <fedor@gnu.org>

	* Source/Makefile.postamble (libgnustep.def): Rebuild manually
	rather than automatically.

2000-12-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: Tidied to conform to coding standards and changed
	to use ISOLatin1 as the default cString encoding.
	* Source/GSString.m: Fixed bug getting cString from unicode string -
	raise exception when it should.
	* Source/NSString.m: ditto.  Also use lossyCString in various
	places rather than cString.
 
2000-12-13  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/base/NSRange.h, Source/NSRange.m: Inlined 
	NSMakeRange.

2000-12-12  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSDebug.m (table_entry): Added peak field.
	(GSDebugAllocationAdd): Set peak counter if needed.
	(GSDebugAllocationClassList), (GSDebugAllocationTotal),
	(GSDebugAllocationPeak): New functions.
	* Headers/gnustep/base/NSDebug.h: Added corresponding
	declarations.

2000-12-08  Adam Fedor  <fedor@gnu.org>

	* Set up DO and NSInvocation to use foreign-function interface
	library.
	* configure.in: Add check for --enable-ffcall
	* Documentation/gnustep-base.texi: Update
	* Documentation/install.texi: Likewise.
	* Documentation/readme.texi: Likewise.
	* Documentation/gsdoc/NSTimeZone.gsdoc: Update.

	* Headers/gnustep/base/NSConnection.h: New forward method.
	* Headers/gnustep/base/NSInvocation.h: New frame ivar.
	* Source/GNUmakefile: Conditionally compile in FFI classes if
	enabled.
	* Source/NSConnection.m (-forwardInvocation:forProxy:): New method.
	(_service_forwardForProxy:): For FFCALL don't autorelease memory,
	call proper forwarding function.
	* Source/NSDistantObject.m (forwardInvocation:): Implement.
	(methodSignatureForSelector:): For FFCALL, forward through
	invocation.
	(conformsToProtocol:): Likewise.
	(respondsToSelector:): Likewise.